--- a/test/fixtures/subscriptions.yml
+++ b/test/fixtures/subscriptions.yml
@@ -2,12 +2,12 @@
 
 one:
   kind: 1
-  account_id: 1
+  account: one
   start_date: 2022-11-26
   end_date: 2022-11-26
 
 two:
   kind: 1
-  account_id: 1
+  account: two
   start_date: 2022-11-26
   end_date: 2022-11-26
